fixed the library name to match the repo name fixed .gitreview to point to the right repo url fixed .arcconfig to have the right project name

--- a/.arcconfig
+++ b/.arcconfig
@@ -1,5 +1,5 @@
 {
-  "project.name" : "phab-security",
+  "project.name" : "security",
   "phabricator.uri" : "https://phabricator.wikimedia.org/",
   "unit.engine" : "PhutilUnitTestEngine"
 }
